# Mellin

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  Makefile.am  README.md  configure.ac  kick_start.sh  setup.sh.in
DrawTool/: Makefile.am  Manager.cc  Manager.hh  RExpData.cc  RExpData.hh  brRootLinkDef.hh  kaon.cc  pion.cc  test.cc
ErrorCalc/: .cvsignore  ErrCalc.cc  ErrCalc.hh  FF_NLO_0-0.05-0.8_w_EM.xml  Makefile.am  PDFCorrCalc.cc  PDFCorrCalc.hh  XsecCorrCalc.cc  XsecCorrCalc.hh  testERR.cc  testRealFunc.cc
Evolution/: .cvsignore  AnomalousDimension.cc  AnomalousDimension.hh  CMakeLists.txt  DGLAPMatrix.cc  DGLAPMatrix.hh  DGLAPpdf.cc  DGLAPpdf.hh  Evolution.dia  Kernel.cc  Kernel.hh  KernelBase.cc  KernelBase.hh  KernelDiff.cc  KernelDiff.hh  KernelPdfLib.cc  KernelPdfLib.hh  KernelSum.cc  KernelSum.hh  Makefile.am  PDF.cc  PDF.hh  PDFx.cc  PDFx.hh  WilsonCoefficient.cc  WilsonCoefficient.hh  main.cc
ExpData/: .cvsignore  A1_Data.cc  A1_Data.hh  Belle.cc  Belle.hh  CMakeLists.txt  COMPASS_PLB680_217.cc  COMPASS_PLB680_217.hh  COMPASS_PLB690_466.cc  COMPASS_PLB690_466.hh  ConfigDataSet.cc  ConfigDataSet.hh  DataParser.cc  DataParser.hh  DataPoint.cc  DataPoint.hh  DataSet.cc  DataSet.hh  E143_A1.cc  E143_A1.hh  E155_A1.cc  E155_A1.hh  EMC_A1.cc  EMC_A1.hh  EMC_Multi.cc  EMC_Multi.hh  ExpData.cc  ExpData.hh  FragXsec.hh  HERMES.cc  HERMES.hh  HERMES_A1.cc  HERMES_A1.hh  HERMES_MultiQ2.cc  HERMES_MultiQ2.hh  HERMES_MultiZ.cc  HERMES_MultiZ.hh  HERMES_SIDIS.hh  HERMES_multiplicities.cc  HERMES_multiplicities.hh  (+50 more)
Fitting/: .cvsignore  A1Data.cc  A1Data.hh  A1hFit.cc  A1hFit.hh  A1hFitLM.cc  A1hFitLM.hh  A1hScale.cc  FitData.cc  FitData.hh  Fitting.cc  Fitting.hh  FragData.cc  FragData.hh  FragXsecFit.cc  FragXsecFit.hh  G1Fit.cc  G1Fit.hh  G1hFit.cc  G1hFit.hh  Makefile.am  MultiData.cc  MultiData.hh  MultiFragFit.cc  MultiFragFit.hh  MultiFragFitLM.cc  MultiFragFitLM.hh  MultiFragScale.cc  MultiFrag_A1hFitLM.cc  MultiFrag_A1hFitLM.hh  TMatrix.cc  TMatrix.hh  UDratio.hh  UDratioData.cc  UDratioData.hh  UDratioFit.cc  UDratioFit.hh  main.cc  qsub_FFfit.sh  testA1hFit.cc  (+7 more)
FragXsec_T/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  FragXsec.cc  FragXsec.hh  Makefile.am  WC.cc  WC.hh  XFragXsec.cc  XFragXsec.hh  XsecComp.cc  XsecComp.hh  main.cc  qsub_xc.sh  testCharge.cc  testCharge_macro.cc  testInversion.cc  testXsec.cc  testXsec_comp.cc
Fragmentation/: .cvsignore  CMakeLists.txt  ConfigFF.cc  ConfigFF.hh  ConfigFFK.cc  ConfigFFK.hh  Evolution.cc  Evolution.hh  Makefile.am  P.cc  P.hh  PDFs.cc  PDFs.hh  diff.cc  hadron.cc  main.cc  printFF.cc  testFFSimple.cc
IntegFragXsec/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  Makefile.am  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  main.cc  nXsecComp.cc  nXsecComp.hh  qsub_cs.sh  testXsec.cc
IntegPolDIS/: .cvsignore  COFbase.cc  COFbase.hh  CoeffFunc.cc  CoeffFunc.hh  Makefile.am  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  main.cc  nXsecComp.cc  nXsecComp.hh  qsub_xg1.sh  testG1.cc
IntegPolSIDIS/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  Makefile.am  PStrFunc.cc  PStrFunc.hh  PartialInteg.hh  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  checkPartialInteg.cc  cont_testF1h_que.sh  main.cc  nXsecComp.cc  nXsecComp.hh  qsub_base.sh  qsub_tG1h.sh  qsub_xg1h.sh  testG1h.cc  testG1h_xz.cc
IntegPolVBoson/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  DYDPlusFunc.hh  DYLogPlusFunc.hh  DYPlusFunc.hh  Makefile.am  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  cont_testPVB_que.sh  nStrFunc.cc  nStrFunc.hh  nXsecComp.cc  nXsecComp.hh  qsub_base.sh  testPVB.cc
IntegSPolVBoson/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  DYDPlusFunc.hh  DYLogPlusFunc.hh  DYPlusFunc.hh  Makefile.am  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  cont_testSPVB_que.sh  nStrFunc.cc  nStrFunc.hh  nXsecComp.cc  nXsecComp.hh  qsub_base.sh  testSPVB.cc
IntegUnpolDIS/: .cvsignore  COFbase.cc  COFbase.hh  CoeffFunc.cc  CoeffFunc.hh  Makefile.am  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  main.cc  nXsecComp.cc  nXsecComp.hh  qsub_xf1.sh  testF1.cc
IntegUnpolDrellYan/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  DYDPlusFunc.hh  DYLogPlusFunc.hh  DYPlusFunc.hh  Makefile.am  PartialInteg.hh  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  cont_testUDY_que.sh  nStrFunc.cc  nStrFunc.hh  nXsecComp.cc  nXsecComp.hh  qsub_base.sh  testUDY.cc
IntegUnpolSIDIS/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  Makefile.am  PStrFunc.cc  PStrFunc.hh  PartialInteg.hh  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  checkPartialInteg.cc  cont_testF1h_que.sh  main.cc  nXsecComp.cc  nXsecComp.hh  qsub_base.sh  qsub_tF1h.sh  qsub_xf1h.sh  testF1h.cc  testF1h_xz.cc
IntegUnpolVBoson/: .cvsignore  COFbase.cc  COFbase.hh  Charge.cc  Charge.hh  CoeffFunc.cc  CoeffFunc.hh  DYDPlusFunc.hh  DYLogPlusFunc.hh  DYPlusFunc.hh  Makefile.am  StrFunc.cc  StrFunc.hh  WC.cc  WC.hh  XsecComp.cc  XsecComp.hh  cont_testUVB_que.sh  nStrFunc.cc  nStrFunc.hh  nXsecComp.cc  nXsecComp.hh  qsub_base.sh  testUVB.cc
IntegXsec/: .cvsignore  CKernel.cc  CKernel.hh  Charge.cc  Charge.hh  ConvIntegPDF.hh  ConvIntegrand.cc  ConvIntegrand.hh  DeltaFunc.hh  IntegXsecComp.cc  IntegXsecComp.hh  LogPlusFunc.hh  Makefile.am  PlusFunc.hh  Wilsons.cc  Wilsons.hh  XsecBase.cc  XsecBase.hh  XsecIntegrand.cc  XsecIntegrand.hh  xXsec.cc  xXsec.hh  xzXsec.cc  xzXsec.hh  xzXsecInteg.cc  xzXsecInteg.hh
PDFLIB/: .cvsignore  AAC.cc  AAC.hh  BB.cc  BB.hh  CMakeLists.txt  CTEQ6.cc  CTEQ6.hh  FF.cc  FF.hh  GRSV2000.cc  GRSV2000.hh  HKNS07.cc  HKNS07.hh  LSS.cc  LSS.hh  LSS2001.f  LSS2005pdf_g1.f  LSS2006pdf_g1.f  MRST2001.cc  MRST2001.hh  MSTW2008.cc  MSTW2008.hh  Makefile.am  Package.cc  (+14 more)
(+982 files in other folders)
